[package]
name = "node"
version = "0.1.0"
authors = ["George Danezis <gdanezis@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
clap = "2.33.3"
env_logger = "0.7.1"
log = "0.4.11"
bytes = "1.0.1"
bincode = "1.3.1"
anyhow = "1.0.40"

futures = "0.3.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
ethers-core = "2"
ethers-signers = "2"
coins-bip39 = "0.8"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = "0.13.0"
rand = "0.8"


config = { path = "../config" }
store = { path = "../store" }
crypto = { path = "../crypto" }
primary = { path = "../primary" }
worker = { path = "../worker" }
consensus = { path = "../consensus" }

[dev-dependencies]
tempfile = "3"

[features]
benchmark = ["worker/benchmark", "primary/benchmark", "consensus/benchmark"]

[[bin]]         
name = "benchmark_client"   
path = "src/benchmark_client.rs" 
required-features = ["benchmark"] 
[[bin]]
name = "worker_rpc_client"
path = "src/worker_rpc_client.rs"
required-features = ["benchmark"]

[[bin]]
name = "tcp_tx_sender"
path = "src/tcp_tx_sender.rs"
required-features=["benchmark"]
