[package]
name = "sailfish_batch_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
rocksdb = "0.22"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
base64 = "0.21"
serde_json = "1.0.140"


# Add internal modules from the workspace
worker = { path = "../worker" }
